syntax = "proto3";

import "cloud/storage/core/protos/error.proto";
import "cloud/filestore/public/api/protos/headers.proto";

package NCloud.NFileStore.NProto;

option java_package = "ru.yandex.cloud.filestore.proto";
option go_package = "a.yandex-team.ru/cloud/filestore/public/api/protos";

////////////////////////////////////////////////////////////////////////////////
// Lock types

enum ELockType
{
    E_SHARED = 0;
    E_EXCLUSIVE = 1;
};

////////////////////////////////////////////////////////////////////////////////
// AcquireLock request/response

message TAcquireLockRequest
{
    // Optional request headers.
    THeaders Headers = 1;

    // FileSystem identifier.
    string FileSystemId = 2;

    // Node.
    uint64 NodeId = 3;

    // IO handle.
    uint64 Handle = 4;

    // Lock owner.
    uint64 Owner = 5;

    // Starting offset for lock.
    uint64 Offset = 6;

    // Number of bytes to lock.
    uint64 Length = 7;

    // Lock type.
    ELockType LockType = 8;
}

message TAcquireLockResponse
{
    // Optional error, set only if error happened.
    NCloud.NProto.TError Error = 1;
}

////////////////////////////////////////////////////////////////////////////////
// ReleaseLock request/response

message TReleaseLockRequest
{
    // Optional request headers.
    THeaders Headers = 1;

    // FileSystem identifier.
    string FileSystemId = 2;

    // Node.
    uint64 NodeId = 3;

    // IO handle.
    uint64 Handle = 4;

    // Lock owner.
    uint64 Owner = 5;

    // Starting offset for lock.
    uint64 Offset = 6;

    // Number of bytes to lock.
    uint64 Length = 7;
}

message TReleaseLockResponse
{
    // Optional error, set only if error happened.
    NCloud.NProto.TError Error = 1;
}

////////////////////////////////////////////////////////////////////////////////
// TestLock request/response

message TTestLockRequest
{
    // Optional request headers.
    THeaders Headers = 1;

    // FileSystem identifier.
    string FileSystemId = 2;

    // Node.
    uint64 NodeId = 3;

    // IO handle.
    uint64 Handle = 4;

    // Lock owner.
    uint64 Owner = 5;

    // Starting offset for lock.
    uint64 Offset = 6;

    // Number of bytes to lock.
    uint64 Length = 7;

    // Lock type.
    ELockType LockType = 8;
}

message TTestLockResponse
{
    // Optional error, set only if error happened.
    NCloud.NProto.TError Error = 1;

    // Lock owner of the conflicting lock if any.
    uint64 Owner = 2;

    // Starting offset of the conflicting lock if any.
    uint64 Offset = 3;

    // Number of bytes of the conflicting lock if any.
    uint64 Length = 4;

}
